アイコン追加 BTデバイスを選択できるようにした 前回のデバイスを保存するようにした

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TankController001-左右展開</string>
+    <string name="app_name">Tank展開</string>
 
     <string name="radioButtonExtends">伸び</string>
     <string name="radioButtonShrink">縮み</string>
@@ -7,7 +7,8 @@
     <string name="radioButtonLR">左右</string>
     <string name="radioButtonUD">上下</string>
 
-    <string name="menu_item1">BT接続</string>
-    <string name="menu_item2">BT切断</string>
+    <string name="menu_item_BTSelect">BTデバイス選択</string>
+    <string name="menu_item_connect">BT接続</string>
+    <string name="menu_item_disconnect">BT切断</string>
 
 </resources>
